kubernetes/samples/scripts/create-weblogic-domain/domain-home-on-pv/istio/gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: default-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default-vs
spec:
  hosts:
  - "*"
  gateways:
  - default-gateway
  http:
#  - match:
#    - uri:
#        prefix: /console
#    route:
#    - destination:
#        host: domain1-admin-server.default.svc.cluster.local
#        port:
#          number: 7001
  - route:
    - destination:
        host: domain1-cluster-cluster-1.default.svc.cluster.local
        port:
          number: 8001
